apps/prod2/tekton/setup/ingress-dashboard.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard-internal
  namespace: tekton-pipelines
  labels:
    app: tekton-dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "${domain_internal}"
      http:
        paths:
          - pathType: Prefix
            path: "${path_for_dashboard}(/|$)(.*)"
            backend:
              service:
                name: tekton-dashboard
                port:
                  name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-dashboard-internal
  namespace: tekton-pipelines
spec:
  parentRefs:
    - kind: Gateway
      name: internal-gateway
      namespace: infra
  hostnames:
    - "${domain_internal}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "${path_for_dashboard}"
      backendRefs:
        - name: tekton-dashboard
          port: 9097
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
